--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1220,6 +1220,12 @@ boss__ingress__nginx__service__default_http_backend_labels: |
     # kubernetes.io/minikube-addons: ingress
     # kubernetes.io/minikube-addons-endpoint: ingress
     addonmanager.kubernetes.io/mode: Reconcile
+
+boss__ingress__nginx__service__default_http_backend_annotations: False
+# boss__ingress__nginx__service__default_http_backend_annotations: |
+#   prometheus.io/scrape: "true"
+#   prometheus.io/port: "10254"
+
 boss__ingress__nginx__deployment__default_http_backend_labels: |
     app.kubernetes.io/name: default-http-backend
     # app.kubernetes.io/part-of: kube-system
