wip: ingress-nginx

--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1147,8 +1147,8 @@ boss__ingress__nginx__deployment_spec_template_metadata_annotations: |
         prometheus.io/scrape: "true"
 boss__ingress__nginx__deployment_spec_template_spec_node_selector: |
         kubernetes.io/hostname: "{{queen_host}}"
-        app.kubernetes.io/name: ingress-nginx
-        app.kubernetes.io/part-of: ingress-nginx
+        # app.kubernetes.io/name: ingress-nginx
+        # app.kubernetes.io/part-of: ingress-nginx
 
 boss__ingress__nginx__service_account_labels: |
     addonmanager.kubernetes.io/mode: Reconcile
