wip: working prometheus-custom vagrant

--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1635,7 +1635,8 @@ boss__prometheus__operator__prometheus_additional_scrape_configs: |
     - role: pod
       namespaces:
         names:
-        - ingress-nginx
+        # - ingress-nginx
+        - kube-system
 
     relabel_configs:
     - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
