wip: ingress-nginx

--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1142,9 +1142,9 @@ boss__ingress__nginx__deployment_spec_template_metadata_annotations: |
         prometheus.io/port: "10254"
         prometheus.io/scrape: "true"
 boss__ingress__nginx__deployment_spec_template_spec_node_selector: |
-        # kubernetes.io/hostname: "{{queen_host}}"
-        app.kubernetes.io/name: ingress-nginx
-        app.kubernetes.io/part-of: ingress-nginx
+        kubernetes.io/hostname: "{{queen_host}}"
+        # app.kubernetes.io/name: ingress-nginx
+        # app.kubernetes.io/part-of: ingress-nginx
 
 boss__ingress__nginx__service_account_labels: |
     addonmanager.kubernetes.io/mode: Reconcile
@@ -1229,6 +1229,11 @@ boss__ingress__nginx__deployment__default_http_backend_labels: |
     # kubernetes.io/minikube-addons: ingress
     # kubernetes.io/minikube-addons-endpoint: ingress
     addonmanager.kubernetes.io/mode: Reconcile
+
+boss__ingress__nginx__defaulthttpbackend_deployment_spec_labels_matchLabels: |
+  app.kubernetes.io/name: default-http-backend
+  # addonmanager.kubernetes.io/mode: Reconcile
+
 
 boss__ingress__nginx__defaulthttpbackend_deployment_spec_template_spec_containers_resources: |
   limits:
