--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1453,11 +1453,11 @@ boss__prometheus__operator__prometheus_operator_config_reloader_image_repo: "qua
 boss__prometheus__operator__prometheus_operator_config_reloader_image_tag: "{{ boss__prometheus__operator__prometheus_operator_config_reloader_version }}"
 boss__prometheus__operator__prometheus_operator_config_reloader_deployment_spec_template_spec_containers_resources: |
   limits:
-    cpu: 200m
-    memory: 200Mi
+    # cpu: 200m
+    memory: 300Mi
     # k8s-infra version # memory: 500Mi
   requests:
-    cpu: 100m
+    # cpu: 100m
     memory: 100Mi
     # k8s-infra version # memory: 300Mi
 
