WIP: kubernetes-manifest updates

--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/tasks/main.yaml
@@ -35,6 +35,7 @@
     - "grafana-ingress.yaml"
     - "grafana-service.yaml"
     - "grafana-serviceAccount.yaml"
+    - "grafana-serviceMonitor.yaml"
     - "kube-state-metrics-clusterRole.yaml"
     - "kube-state-metrics-clusterRoleBinding.yaml"
     - "kube-state-metrics-deployment.yaml"
