--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1649,6 +1649,22 @@ boss__prometheus__operator__prometheus_additional_scrape_configs: |
 #       labels:
 #         alias: unifi_exporter
 
+boss__prometheus__operator__alertmanager_plaintext_configs: |
+  global:
+    resolve_timeout: 5m
+  route:
+    group_by: ['job']
+    group_wait: 30s
+    group_interval: 5m
+    repeat_interval: 12h
+    receiver: 'null'
+    routes:
+    - match:
+        alertname: Watchdog
+      receiver: 'null'
+  receivers:
+  - name: 'null'
+
 
 ####################################################################################################
 #   .##.....##.##....##.####.########.####.........########.##.....##.########...#######..########..########.########.########.
