--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1564,7 +1564,7 @@ boss__prometheus__operator__grafana_pv_labels: |
 
 boss__prometheus__operator__grafana_pv_spec_capacity_storage: 2Gi
 boss__prometheus__operator__grafana_pv_spec_nfs: |
-    server: 192.168.205.12
+    server: {{nfs_server_ip_override}}
     path: "/mnt/publicdata/grafana"
 
 
@@ -1586,7 +1586,7 @@ boss__prometheus__operator__prometheus_adapter_tmpfs_pv_labels: |
 
 boss__prometheus__operator__prometheus_adapter_tmpfs_pv_spec_capacity_storage: 250Mi
 boss__prometheus__operator__prometheus_adapter_tmpfs_pv_spec_nfs: |
-    server: 192.168.205.12
+    server: {{nfs_server_ip_override}}
     path: "/mnt/publicdata/prometheus-adapter-tmpfs"
 
 # persistent volume claim - prometheus-adapter-volume-serving-cert
@@ -1607,7 +1607,7 @@ boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_labels: |
 
 boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_capacity_storage: 250Mi
 boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_nfs: |
-    server: 192.168.205.12
+    server: {{nfs_server_ip_override}}
     path: "/mnt/publicdata/prometheus-adapter-volume-serving-cert"
 
 boss__prometheus__operator__prometheus_additional_scrape_configs: |
