--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -312,7 +312,7 @@ boss__efk__elasticsearch_curator_mem_requests: 200Mi #
 #    .##.......##.......##.....##.##.......##...###....##....##.....##
 #    .##.......########..#######..########.##....##....##....########.
 ##########################################################################################################
-boss__efk__fluentd_version: v2.2.0
+boss__efk__fluentd_version: v2.3.0
 boss__efk__fluentd_image_repo: "bossjones/fluentd-elasticsearch"
 boss__efk__fluentd_image_tag: "{{ boss__efk__fluentd_version }}"
 boss__efk__fluentd_mem_limit: 500Mi
@@ -338,17 +338,17 @@ boss__efk__fluentd_cluster_role_binding_labels: |
     boss-part-of: efk
 boss__efk__fluentd_daemon_set_labels: |
     k8s-app: fluentd-es
-    version: v2.2.1
+    version: {{boss__efk__fluentd_version}}
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
     boss-part-of: efk
 boss__efk__fluentd_daemon_set_spec_selector_match_labels: |
       k8s-app: fluentd-es
-      # version: v2.2.1
+      # version: {{boss__efk__fluentd_version}}
 boss__efk__fluentd_daemon_set_spec_template_metadata_labels: |
         k8s-app: fluentd-es
         # kubernetes.io/cluster-service: "true"
-        # version: v2.2.1
+        # version: {{boss__efk__fluentd_version}}
         # boss-part-of: efk
 boss__efk__fluentd_daemon_set_spec_template_metadata_annotations: |
         scheduler.alpha.kubernetes.io/critical-pod: ''
@@ -387,6 +387,7 @@ boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts: |
   - name: libsystemd
     # mountPath: /usr/lib64/libsystemd.so.0
     mountPath: /lib/x86_64-linux-gnu/libsystemd.so.0
+    # mountPath: /usr/lib64/libsystemd.so.0
 
 boss__efk__fluentd_daemon_set_spec_template_spec_volumes: |
   # It is needed to copy systemd library to decompress journals
@@ -406,6 +407,7 @@ boss__efk__fluentd_daemon_set_spec_template_spec_volumes: |
   - name: docker-sock
     hostPath:
       # path: /var/run/docker/libcontainerd/docker-containerd.sock
+      # path: /var/run/docker.sock
       path: /var/run/docker/containerd/containerd.sock
   - name: varrun
     hostPath:
@@ -413,6 +415,7 @@ boss__efk__fluentd_daemon_set_spec_template_spec_volumes: |
   - name: libsystemd
     hostPath:
       path: /usr/lib64/libsystemd.so.0
+      # path: /lib/x86_64-linux-gnu/libsystemd.so.0
 
 ############################################
 
