--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1842,6 +1842,7 @@ boss__fluent__bit__centralized__fluent_bit_version: 1.0.5
 boss__fluent__bit__centralized__fluent_bit_image_repo: "fluent/fluent-bit"
 boss__fluent__bit__centralized__fluent_bit_image_tag: "{{ boss__fluent__bit__centralized__fluent_bit_version }}"
 boss__fluent__bit__centralized__shared_name: fluent-bit-centralized
+boss__fluent__bit__centralized__configmap_suffix: "-0-1-0"
 
 boss__fluent__bit__centralized__deployment_spec_template_containers_resources: |
   limits:
@@ -1884,6 +1885,50 @@ boss__fluent__bit__centralized__deployment_spec_template_containers_env: |-
     value: "elasticsearch"
   - name: FLUENT_ELASTICSEARCH_PORT
     value: "9200"
+
+    # Memory limit that the file tail plugin can use when appending data to the Engine
+  - name: TAIL_BUF_LIMIT
+    value: "5MB"
+
+  - name: NODE_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.hostIP
+  - name: POD_UID
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.uid
+  - name: POD_NAME
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.name
+  - name: POD_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.podIP
+  - name: POD_NAMESPACE
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.namespace
+
+boss__fluent__bit__centralized__deployment_spec_template_spec_volumeMounts: |
+  - name: logging-volume # The volume where logs will be delivered by the Docker logging driver
+    mountPath: /logging-volume
+  # The volume where Fluent Bit stores persistent data (position databases for tracking ingested files)
+  - name: fluent-data
+    mountPath: /var/fluent-bit
+  # The Fluent Bit config file to use
+  - name: fluent-bit-config
+    mountPath: /fluent-bit/etc
+
+boss__fluent__bit__centralized__deployment_spec_template_spec_volumes: |
+  - name: logging-volume
+    emptyDir: {}
+  - name: fluent-bit-config
+    configMap:
+      name: {{boss__fluent__bit__centralized__shared_name}}-config{{boss__fluent__bit__centralized__configmap_suffix}}
+  - name: fluent-data
+    emptyDir: {}
 
 boss__fluent__bit__centralized__service_labels: |-
   k8s-app: {{boss__fluent__bit__centralized__shared_name}}
