--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1913,6 +1913,14 @@ boss__fluent__bit__centralized__deployment_spec_template_containers_env: |-
     valueFrom:
       fieldRef:
         fieldPath: metadata.namespace
+  - name: NODE_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.hostIP
+  - name: NODE_NAME
+    valueFrom:
+      fieldRef:
+        fieldPath: spec.nodeName
 
 boss__fluent__bit__centralized__deployment_spec_template_spec_volumeMounts: |
   - name: logging-volume # The volume where logs will be delivered by the Docker logging driver
