--- a/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/tasks/main.yaml
@@ -25,3 +25,10 @@
     state: "{{boss__fluent__bit__centralized__create_namespace}}"
     path: "{{ boss__fluent__bit__centralized__manifest_path }}/0fluent-bit-centralized.namespace.yaml"
   when: boss__fluent__bit__centralized__create_namespace is defined and boss__fluent__bit__centralized__create_namespace == "absent"
+
+
+- name: Clean artifact path ingress
+  file:
+    state: "{{boss__fluent__bit__centralized__create_ingress}}"
+    path: "{{ boss__fluent__bit__centralized__manifest_path }}/7fluent-bit-centralized.ingress.yaml"
+  when: boss__fluent__bit__centralized__create_ingress is defined and boss__fluent__bit__centralized__create_ingress == "absent"
